--- a/MST/wwwroot/css/style.css
+++ b/MST/wwwroot/css/style.css
@@ -82,6 +82,7 @@ main {
 .footer-section {
     background-color: #111; /* Dark background */
     color: #ddd;
+    margin-top: -20px;
 }
 
 .footer-logo img {
