add work together

--- a/MST/Views/Shared/_Layout.cshtml
+++ b/MST/Views/Shared/_Layout.cshtml
@@ -16,7 +16,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TESTING</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    @* <img src="~/images/logo.png" alt="Logo" height="60"> *@TESTING 
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -61,7 +63,7 @@
                 <!-- Logo and description -->
                 <div class="col-md-3 mb-4">
                     <div class="footer-logo d-flex align-items-center mb-3">
-                        <img src="~/images/logo.jpg" alt="Logo" width="40" class="me-2">
+                        <img src="~/images/logo.png" alt="Logo" width="40" class="me-2">
                         <h5 class="m-0 fw-bold">CONCHITEC</h5>
                     </div>
                     <p class="text-light small">
